cmake_minimum_required(VERSION 2.6)

if (${USE_LUAJIT})
    add_subdirectory( luajit )
else()
    add_subdirectory( lua )
endif ()

add_subdirectory( luasocket )
add_subdirectory( rvo2 )
add_subdirectory( enet )
add_subdirectory( yaml-cpp )
add_subdirectory( libxmi )
add_subdirectory( UnitTest++ )
add_subdirectory( physfs )
