cmake_minimum_required(VERSION 2.6)

if (${USE_LUAJIT})
    add_subdirectory( luajit )
else()
    add_subdirectory( lua )
endif ()

add_subdirectory( luasocket )
add_subdirectory( rvo2 )
add_subdirectory( enet )
add_subdirectory( lua-enet )
add_subdirectory( yaml-cpp )
add_subdirectory( lua-yaml )
add_subdirectory( libxmi )
add_subdirectory( UnitTest++ )
add_subdirectory( physfs )
add_subdirectory( sdl2 )
add_subdirectory( sdl2-image )
add_subdirectory( sdl2-mixer )
add_subdirectory( backward-cpp )
add_subdirectory( lua-box2d )
add_subdirectory( lpeg )
add_subdirectory( minilzo )
