add_definitions("-std=c++14 -Wno-c++11-narrowing")
add_subdirectory( luawrap-lib )
add_subdirectory( common-lib )
add_subdirectory( dungeon-generation-lib )
if ($ENV{BUILD_HEADLESS})
    add_subdirectory( draw-lib-headless )
else()
    add_subdirectory( draw-lib )
endif()
add_subdirectory( net-lib )
add_subdirectory( sound-lib )
